--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
   },
   "dependencies": {
     "daisy": "^0.2.0",
-    "next": "16.0.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "14.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "ui": "^0.2.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "babel-plugin-react-compiler": "1.0.0",
     "daisyui": "^5.4.5",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
